fix horizontal scroll offset

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -4,8 +4,6 @@
 
 html,
 body {
-	height: 100vh;
-	width: 100vw;
 	margin: 0;
 	padding: 0;
 	background-color: #21262d;
